change background color

--- a/main.css
+++ b/main.css
@@ -12,6 +12,6 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: -apple-system, 'Helvetica Neue', sans-serif;
-	background: #eee;
+	background: orangered;
 	font-size: 16px;
 }
